// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> activeTabId is not passed renders the first tab as active 1`] = `
<Fragment>
  <Flex>
    <Tab
      active={true}
      aria-controls="tab-1-tab-content"
      aria-selected="true"
      content={
        <ForwardRef(render)
          id="tab-1-tab-content"
        >
          Tab 1 Content
        </ForwardRef(render)>
      }
      id="tab-1"
      key="tab-1"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="0"
    >
      Tab 1
    </Tab>
    <Tab
      active={false}
      aria-controls="tab-2-tab-content"
      aria-selected="false"
      content={
        <ForwardRef(render)
          id="tab-2-tab-content"
        >
          Tab 2 Content
        </ForwardRef(render)>
      }
      id="tab-2"
      key="tab-2"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="0"
    >
      Tab 2
    </Tab>
  </Flex>
  <Box>
    Tab 1 Content
  </Box>
</Fragment>
`;

exports[`<Tabs /> activeTabId is passed renders the first tab as active 1`] = `
<Fragment>
  <Flex
    activeTabId="tab-2"
  >
    <Tab
      active={false}
      aria-controls="tab-1-tab-content"
      aria-selected="false"
      content={
        <ForwardRef(render)
          id="tab-1-tab-content"
        >
          Tab 1 Content
        </ForwardRef(render)>
      }
      id="tab-1"
      key="tab-1"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="0"
    >
      Tab 1
    </Tab>
    <Tab
      active={true}
      aria-controls="tab-2-tab-content"
      aria-selected="true"
      content={
        <ForwardRef(render)
          id="tab-2-tab-content"
        >
          Tab 2 Content
        </ForwardRef(render)>
      }
      id="tab-2"
      key="tab-2"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex="0"
    >
      Tab 2
    </Tab>
  </Flex>
  <Box>
    Tab 2 Content
  </Box>
</Fragment>
`;
